--- a/ArbolesM-Vias/src/arbolesm/vias/MainForm.form
+++ b/ArbolesM-Vias/src/arbolesm/vias/MainForm.form
@@ -280,7 +280,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="SumaNiveless">
       <Properties>
-        <Property name="text" type="java.lang.String" value="SUMA NIVELES"/>
+        <Property name="text" type="java.lang.String" value="SUMA TODOS LOS NIVELES"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="SumaNivelessActionPerformed"/>
