--- a/ArbolesM-Vias/src/arbolesm/vias/MainForm.form
+++ b/ArbolesM-Vias/src/arbolesm/vias/MainForm.form
@@ -69,7 +69,10 @@
                                   <Component id="Buscar" alignment="0" min="-2" pref="128" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="SumaNiveless" min="-2" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="SumaNiveless" min="-2" max="-2" attributes="0"/>
+                                  <Component id="PrimosNivel" min="-2" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
                       </Group>
                       <EmptySpace max="32767" attributes="0"/>
@@ -133,7 +136,10 @@
                                   <Component id="SumaNiveless" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="Buscar" min="-2" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="3" attributes="0">
+                                  <Component id="Buscar" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="PrimosNivel" alignment="3" min="-2" max="-2" attributes="0"/>
+                              </Group>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="BuscarNodo" min="-2" max="-2" attributes="0"/>
                           </Group>
@@ -364,6 +370,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="RecorridoNiveles2ActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="PrimosNivel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="PRIMOS POR NIVEL"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="PrimosNivelActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
